Corrected the alignment of the overlay component

--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,15 @@
 }
 
 body {
-  padding-top: 164px;
+  padding-top: 150px;
+
   background-color: #f2f5f9;
   margin: 0 1rem;
 }
 
 .card {
   margin: 0 auto;
-  max-width: 362px;
+  max-width: 410px;
   border-radius: 0.5rem;
   overflow: hidden;
   background-color: #ffffff;
@@ -32,17 +33,29 @@ body {
 
 .card__image {
   position: relative;
-  max-width: 100%;
-  aspect-ratio: 4/3;
+  width: 100%;
+  min-height: 250px;
+  overflow: hidden;
+  isolation: isolate;
+  display: flex;
+  align-items: flex-end;
 }
 
 .card__image img {
   position: absolute;
-  width: 100%;
+  max-width: 100%;
+  bottom: 0;
+  object-fit: cover;
 }
 
-.card__image img:nth-child(2) {
-  bottom: 0;
+.card__image img:nth-child(1) {
+  object-fit: cover;
+  z-index: -1;
+}
+
+#card__overlay {
+  position: absolute;
+  bottom: -10px;
 }
 
 .card__content {
@@ -51,15 +64,20 @@ body {
   color: var(--body-color);
 }
 
+.card__content p {
+  width: 100%;
+}
+
 .card__content,
 .profile__footer {
-  padding-left: 1rem;
+  padding: 1rem 2rem;
 }
 
 .card__title {
   font-family: var(--title-font);
   font-size: var(--title-font-size);
   color: var(--title-color);
+  margin-bottom: 1rem;
 }
 
 .profile__footer {
@@ -73,9 +91,11 @@ body {
 }
 
 .profile__footer img {
-  width: 50px;
-  height: 50px;
+  --aspect-ratio: 40px;
+  width: var(--aspect-ratio);
+  height: var(--aspect-ratio);
   border-radius: 50%;
+  box-shadow: 0 0 0 6px #f2f5f9;
 }
 
 .profile__details {
